Fixed font sizes and testing effect of no particles on lag

--- a/css/main.css
+++ b/css/main.css
@@ -22,20 +22,20 @@ h1 {
     text-align: center;
     color: white;
     font-weight: bold;
-    font-size: 128px
+    font-size: 800%;
 }
 
 h2 {
     text-align: center;
     color: white;
     font-weight: bold;
-    font-size: 32px
+    font-size: 250%
 }
 
 h3 {
     color: white;
     font-weight: bold;
-    font-size: 32px;
+    font-size: 250%;
 }
 
 * {
