--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,12 @@
 body {
     background-color: #9252CD;
+    width: 100%;
+    height: 100%;
+}
+#particles-js {
+    position:absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .center {
@@ -10,18 +17,14 @@ body {
     transform: translate(-50%, 0%);
 }
 
-.padded {
-    text-align: left;
-    position: fixed;
-    top: 30%;
-    left: 30px;
-}
-
 h1 {
     text-align: center;
     color: white;
     font-weight: bold;
     font-size: 400%;
+    margin:0;
+    padding:0;
+    font-family: "Lucida Console", Monaco, monospace;
 }
 
 h2 {
@@ -29,148 +32,86 @@ h2 {
     color: white;
     font-weight: bold;
     font-size: 200%;
+    margin:0;
+    padding:0;
+    font-family: "Lucida Console", Monaco, monospace;
 }
 
 h3 {
     color: white;
     font-weight: bold;
     font-size: 75%;
+    margin:0;
+    padding:0;
+    text-align: center;
+    font-family: "Lucida Console", Monaco, monospace;
+}
+
+.dynamic-div {
+    display: inline-block;
+    max-width: 80%;
+}
+
+.typed {
+    height: 30%;
+    word-wrap: break-word;
 }
 
 @media(min-width:60em) {
     h1 {
         font-size: 800%;
         white-space: nowrap;
+        margin:0;
+        padding:0;
+        font-family: "Lucida Console", Monaco, monospace;
     }
 
     h2 {
-        font-size: 250%
+        font-size: 250%;
+        margin:0;
+        padding:0;
+        font-family: "Lucida Console", Monaco, monospace;
     }
 
     h3 {
-        font-size: 250%;
+        font-size: 150%;
+        margin:0;
+        padding:0;
+        font-family: "Lucida Console", Monaco, monospace;
+    }
+
+    .dynamic-div {
+        display: inline-block;
+        max-width: 50%;
     }
 }
 
-* {
-    margin:0;
-    padding:0;
-    font-family: "Lucida Console", Monaco, monospace;
-}
-html, body {
-    width:100%;
-    height:100%;
-}
 body {font-family:sans-serif;}
-body > div {
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:transparent center no-repeat;
-    background-size:cover;
-}
-/*body > div:nth-child(3) {*/
-    /*background:#f0f0f0;*/
-    /*overflow:hidden;*/
-/*}*/
-.binary {
-    position:absolute;
-    left:0;
-    top: 0;
-    height:20%;
-    width: 25%;
-    /*background: #B6AEF0;*/
-    background: #2E1CAF;
-}
-
-.binaryDesc {
-    position:absolute;
-    left:25%;
-    top: 0;
-    height:20%;
-    width: 75%;
-    /*background: #2E1CAF;*/
-    background:#6A5BD0;
-}
-
-.algo {
-    position:absolute;
-    left:0;
-    top: 20%;
-    height:20%;
-    width: 25%;
-    /*background:#8B7FE1;*/
-    background: #2E1CAF;
-}
-
-.algoDesc {
-    position:absolute;
-    right:0;
-    top: 20%;
-    height:20%;
-    width: 75%;
-    /*background:#4D3EBF;*/
-    background:#6A5BD0;
-}
-
-.crypto {
-    position:absolute;
-    left:0;
-    top: 40%;
-    height:20%;
-    width: 25%;
-    /*background:#6A5BD0;*/
-    background: #2E1CAF;
-}
-
-.cryptoDesc {
-    position:absolute;
-    right:0;
-    top: 40%;
-    height:20%;
-    width: 75%;
-    background:#6A5BD0;
-}
-
-.web {
-    position:absolute;
-    left:0;
-    top: 60%;
-    height:20%;
-    width: 25%;
-    /*background:#4D3EBF;*/
-    background: #2E1CAF;
-}
-
-.webDesc {
-    position:absolute;
-    right:0;
-    top: 60%;
-    height:20%;
-    width: 75%;
-    /*background:#8B7FE1;*/
-    background:#6A5BD0;
-}
-
-.forensics {
-    position:absolute;
-    left:0;
-    top: 80%;
-    height:20%;
-    width: 25%;
-    background:#2E1CAF;
-}
-
-.forensicsDesc {
-    position:absolute;
-    right:0;
-    top: 80%;
-    height:20%;
-    width: 75%;
-    /*background: #B6AEF0;*/
-    background:#6A5BD0;
-}
 
 p {margin:1em 0;}
+
+.typed-strings {
+    display: none;
+}
+
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
