--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ h2 {
     font-size: 200%;
     margin:0;
     padding:0;
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: "Courier New", Courier, monospace
 }
 
 h3 {
@@ -44,7 +44,7 @@ h3 {
     margin:0;
     padding:0;
     text-align: center;
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: "Courier New", Courier, monospace
 }
 
 .dynamic-div {
@@ -56,27 +56,17 @@ h3 {
     h1 {
         font-size: 800%;
         white-space: nowrap;
-        margin:0;
-        padding:0;
-        font-family: "Lucida Console", Monaco, monospace;
     }
 
     h2 {
         font-size: 250%;
-        margin:0;
-        padding:0;
-        font-family: "Lucida Console", Monaco, monospace;
     }
 
     h3 {
         font-size: 150%;
-        margin:0;
-        padding:0;
-        font-family: "Lucida Console", Monaco, monospace;
     }
 
     .dynamic-div {
-        display: inline-block;
         max-width: 50%;
     }
 }
