--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ h1 {
     font-size: 400%;
     margin:0;
     padding:0;
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: 'Source Code Pro', Monaco, monospace;
 }
 
 h2 {
@@ -34,7 +34,7 @@ h2 {
     font-size: 200%;
     margin:0;
     padding:0;
-    font-family: "Courier New", Courier, monospace
+    font-family: 'Source Code Pro', Monaco, monospace;
 }
 
 h3 {
@@ -44,7 +44,7 @@ h3 {
     margin:0;
     padding:0;
     text-align: center;
-    font-family: "Courier New", Courier, monospace
+    font-family: 'Source Code Pro', Monaco, monospace;
 }
 
 .dynamic-div {
