--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,15 @@ body {
     width: 100%;
     height: 100%;
 }
+
+a:link {
+    color: yellow;
+}
+
+a:visited {
+    color: yellow;
+}
+
 #particles-js {
     position:absolute;
     width: 100%;
@@ -75,9 +84,16 @@ body {font-family:sans-serif;}
 
 p {margin:1em 0;}
 
-.slide-right {
-    margin: 5%;
+p.slide-right {
+  color: white;
+  font-family: 'Source Code Pro', Monaco, monospace;
+  text-align: center;
+  margin-bottom: 2em;
 }
+
+/*.slide-right {
+    margin: 5%;
+}*/
 
 .typed-strings {
     display: none;
