--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ body {font-family:sans-serif;}
 
 p {margin:1em 0;}
 
-#problem-types > p {
+#problem-types p {
   color: white;
   font-family: 'Source Code Pro', Monaco, monospace;
   text-align: center;
